# ash-engine

./: .gitignore  AshEngine.pro  BK.tga  CMakeLists.txt  DN.tga  Info.plist  LICENSE  README.md  UP.tga  axis.cpp  basicShapes.cpp  camera.cpp  extmath.cpp  glad.cpp  glconfig.cpp  gridlines.cpp  io.cpp  light.cpp  load.cpp  main.cpp  makefile  masterEngine.pro  masterEngine_resource.aps  material.cpp  mesh.cpp  model.cpp  resources.qrc  scene.cpp  sdf.cpp  shader.cpp  skybox.cpp  texture.cpp  textureManager.cpp  utilities.cpp  vector3f.cpp  wall.mtl  window.cpp
deploy/: Info.plist  windeploy.sh
doc/: advanced-user-manual1-cn.md  advanced-user-manual1-en.md  advanced-user-manual2-cn.md  advanced-user-manual2-en.md  advanced-user-manual3-cn.md  advanced-user-manual3-en.md  advanced-user-manual4-cn.md  advanced-user-manual4-en.md  advanced-user-manual5-cn.md  advanced-user-manual5-en.md  advanced-user-manual6-cn.md  advanced-user-manual6-en.md  basic-manual-cn.md  basic-manual-en.md  build-cn.md  build-en.md
icon/: AppIcon.icns
include/: FreeImage.h  axis.h  basicShapes.h  camera.h  cursor.h  extmath.h  face.h  glconfig.h  gridlines.h  io.h  light.h  load.h  material.h  mesh.h  model.h  scene.h  sdf.h  shader.h  skybox.h  texture.h  textureManager.h  utilities.h  vector3f.h  vertex.h  window.h
include/Core/: AbstractEntity.h  AbstractGizmo.h  AbstractLight.h  AmbientLight.h  Axis.h  Camera.h  (+22 more)
lib/: libglfw.dylib
shader/: fragmentShader.glsl  light.frag  light.vert  mesh.frag  mesh.vert  sdf.frag  sdf.vert  vertexShader.glsl
src/: AshEngine.cpp  masterEngine.cpp
(+262 files in other folders)
